--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,5 +1,16 @@
-$body-color: red;
+@font-face {
+  font-family: "Flower";
+  src: url("../fonts/flower-webfont.woff2") format("woff2"),
+    url("../fonts/flower-webfont.woff") format("woff");
+  font-weight: 600;
+  font-style: normal;
+}
 
 body {
-  color: $body-color;
+  background-image: url("../images/vietnam-street.jpg");
+  background-size: 1000px;
+}
+
+.header > div {
+  font-family: "Flower", sans-serif;
 }
