added side margin to home screen title

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -69,6 +69,7 @@ body {
   color: white;
   padding-bottom: 40px;
   border-bottom: solid 2px white;
+  margin: 150px 10px 0 10px;
 }
 
 .home .subtitle {
