--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -19,18 +19,23 @@ body {
   height: 100vh;
 }
 
-body {
+.container {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+  justify-content: flex-start;
+  transition: all 1s linear;
+}
+
+.container {
   background: url("../images/vietnam-street.jpg") no-repeat center center fixed;
   background-size: cover;
   background-color: rgba(0, 0, 0, 0.5);
   background-blend-mode: multiply;
 }
 
-.container {
-  display: flex;
-  min-height: 100vh;
-  flex-direction: column;
-  justify-content: flex-start;
+.container.black {
+  background: black;
 }
 
 .header {
@@ -43,9 +48,16 @@ body {
 }
 
 .header > div {
+  user-select: none;
   font-family: "Poppins", sans-serif;
   font-size: 24px;
   color: lightblue;
+  transition: all 0.3s linear;
+}
+
+.header > div:hover {
+  color: lightseagreen;
+  transform: scale(1.1);
 }
 
 .home {
